--- a/content/resources/mit8_333f13_lec10.md
+++ b/content/resources/mit8_333f13_lec10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 10.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/ae32d4e53c9fa0bee4171378caa4ea84_MIT8_333F13_Lec10.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 10'
 uid: ae32d4e5-3c9f-a0be-e417-1378caa4ea84
