--- a/content/resources/mit8_333f13_lec11.md
+++ b/content/resources/mit8_333f13_lec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 11.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/7b163cc0ea1359b70b018a1415399d64_MIT8_333F13_Lec11.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 11'
 uid: 7b163cc0-ea13-59b7-0b01-8a1415399d64
