--- a/content/resources/mit8_333f13_lec12.md
+++ b/content/resources/mit8_333f13_lec12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 12.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/0cb99318c2ed889316cdcff839759e8d_MIT8_333F13_Lec12.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 12'
 uid: 0cb99318-c2ed-8893-16cd-cff839759e8d
