--- a/content/resources/mit8_333f13_lec13.md
+++ b/content/resources/mit8_333f13_lec13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 13.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/0cdb670a825c6aaea7e229ac40776cbf_MIT8_333F13_Lec13.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 13'
 uid: 0cdb670a-825c-6aae-a7e2-29ac40776cbf
