--- a/content/resources/mit8_333f13_lec17.md
+++ b/content/resources/mit8_333f13_lec17.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 17.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/6739dd6055176b78b9103e2de8850978_MIT8_333F13_Lec17.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 17'
 uid: 6739dd60-5517-6b78-b910-3e2de8850978
