--- a/content/resources/mit8_333f13_lec2.md
+++ b/content/resources/mit8_333f13_lec2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 2.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/1a131e225246d9749a298f49675c5fe5_MIT8_333F13_Lec2.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 2'
 uid: 1a131e22-5246-d974-9a29-8f49675c5fe5
