--- a/content/resources/mit8_333f13_lec21.md
+++ b/content/resources/mit8_333f13_lec21.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 21.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/4f8defd6fcba707a0c691dd8957a43e3_MIT8_333F13_Lec21.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 21'
 uid: 4f8defd6-fcba-707a-0c69-1dd8957a43e3
