--- a/content/resources/mit8_333f13_lec22.md
+++ b/content/resources/mit8_333f13_lec22.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 22.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/7f26f530bdda5d69c399057bd4b1bd28_MIT8_333F13_Lec22.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 22'
 uid: 7f26f530-bdda-5d69-c399-057bd4b1bd28
