--- a/content/resources/mit8_333f13_lec24.md
+++ b/content/resources/mit8_333f13_lec24.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 24.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/9d5207eef23c4d6e18ef3afbca5d9d81_MIT8_333F13_Lec24.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 24'
 uid: 9d5207ee-f23c-4d6e-18ef-3afbca5d9d81
