--- a/content/resources/mit8_333f13_lec3.md
+++ b/content/resources/mit8_333f13_lec3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 3.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/df0c4e121858c0be246b496dd8c39d2c_MIT8_333F13_Lec3.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 3'
 uid: df0c4e12-1858-c0be-246b-496dd8c39d2c
