--- a/content/resources/mit8_333f13_lec5.md
+++ b/content/resources/mit8_333f13_lec5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 5.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/1304ec80aa5eef756953cb9836c71783_MIT8_333F13_Lec5.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 5'
 uid: 1304ec80-aa5e-ef75-6953-cb9836c71783
