--- a/content/resources/mit8_333f13_lec6.md
+++ b/content/resources/mit8_333f13_lec6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 6.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/d6cfa6c732e826b0dc3261423b0de766_MIT8_333F13_Lec6.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 6'
 uid: d6cfa6c7-32e8-26b0-dc32-61423b0de766
