--- a/content/resources/mit8_333f13_lec7.md
+++ b/content/resources/mit8_333f13_lec7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 7.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/e84a1d807e85675360d9ac0098b61885_MIT8_333F13_Lec7.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 7'
 uid: e84a1d80-7e85-6753-60d9-ac0098b61885
