--- a/content/resources/mit8_333f13_lec8.md
+++ b/content/resources/mit8_333f13_lec8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 8.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/b8c07404633cdba3217e434ac06569ad_MIT8_333F13_Lec8.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 8'
 uid: b8c07404-633c-dba3-217e-434ac06569ad
