--- a/content/resources/mit8_333f13_lec9.md
+++ b/content/resources/mit8_333f13_lec9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture note 9.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/8-333-statistical-mechanics-i-statistical-mechanics-of-particles-fall-2013/ce250b44390106351cb97aafb0060ca7_MIT8_333F13_Lec9.pdf
 file_type: application/pdf
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 9'
 uid: ce250b44-3901-0635-1cb9-7aafb0060ca7
